<resources>
    <!-- 공통 -->
    <string name="btn_confirm">확인</string>

    <string name="app_name">Product Manager</string>
    <string name="btn_data_insert">내용입력</string>
    <string name="btn_data_main_category">품명 관리</string>
    <string name="btn_data_insert_category">카테고리 데이터 삽입</string>
    <string name="btn_data_confirm">내용 확인</string>
    <string name="btn_data_remove">전체삭제</string>
    <string name="btn_picture">사진찍기</string>
    <string name="btn_make_excel">엑셀파일 출력</string>
    <string name="btn_manufacturer_management">제조사 관리</string>
    <string name="btn_model_management">모델명 관리</string>
    <string name="btn_size_management">규격 관리</string>

    <string name="text_category_title">품명관리</string>
    <string name="text_main_category_title">대분류</string>
    <string name="text_sub_category_title">품명</string>

    <string name="text_menufacturer_title">제조사 관리</string>
    <string name="text_menufacturer_subcategory_title">제조사</string>

    <string name="text_model_title">모델명 관리</string>

    <string name="text_search_keyword">검색</string>

    <string name="text_label">라벨번호</string>
    <string name="text_location">위치</string>
    <string name="text_name">품명</string>
    <string name="input_btn_load">불러오기</string>
    <string name="text_manufacturer">제조사</string>
    <string name="text_model">모델명</string>
    <string name="text_size">규격</string>
    <string name="text_manufacture_date">제조일자</string>
    <string name="text_condition">상태</string>
    <string name="text_amount">수량</string>
    <string name="text_note">비고</string>
    <string name="input_btn_favorite">즐찾추가</string>
    <string name="input_btn_clear">내용삭제</string>
    <string name="input_btn_confirm">저장</string>

    <string name="input_text_size_length">가로</string>
    <string name="input_text_size_width">세로</string>
    <string name="input_text_size_height">높이</string>

    <string name="input_name_cabinet">캐비닛</string>
    <string name="input_name_table">수강용테이블</string>
    <string name="input_name_round_table">응접탁자</string>
    <string name="input_name_chair">작업용의자</string>
    <string name="input_name_foldable_chair">접이식의자</string>
    <string name="input_name_sofa">소파</string>
    <string name="input_name_work_table">작업용테이블</string>
    <string name="input_name_file_box">이동식파일서랍</string>
    <string name="input_tag_use">사진 태그 사용 여부</string>
    <string name="input_tag_name">사용할 태그명을 입력하세요.</string>
    <string name="input_tag_save">태그 등록</string>
    <string name="input_tag_editable">잠금 해제</string>
    <string name="input_tag_save_finish">태그 저장 완료</string>


    <string name="text_condition_none">None</string>
    <string name="text_condition_high">상</string>
    <string name="text_condition_middle">중</string>
    <string name="text_condition_low">하</string>

    <string name="hint_input_amount">안넣으면 1</string>
    <string name="hint_input_manufacture_date">1900.01.01</string>

    <string name="message_invalid_date">제조일 정보가 정확하지 않습니다.</string>
    <string name="message_success_save">자료가 저장되었습니다.</string>
    <string name="message_success_delete">자료가 삭제되었습니다.</string>
    <string name="message_alert_delete_data">선택하신 항목 삭제하시겠습니까?</string>
    <string name="message_alert_delete_all">저장된 모든 데이터를 삭제하시겠습니까?</string>
    <string name="message_toast_input_value_only_number">숫자만 입력해 주세요.</string>

</resources>
