<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- 라벨번호 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_label"/>
            <EditText
                android:id="@+id/ed_input_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_label"
                android:lines="1"
                android:inputType="text|textCapSentences" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_take_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/btn_picture"
            android:src="@drawable/ic_camera"
            android:background="@drawable/shape_round_05" />

        <!-- 위치 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_location"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_input_location"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_location"
                android:inputType="text"
                android:lines="1" />
        </RelativeLayout>

        <!-- 품명 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_name"/>
            <EditText
                android:id="@+id/et_input_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_name"
                android:lines="1"
                android:inputType="text" />
        </RelativeLayout>

        <!-- 제조사 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_manufacturer"/>
            <EditText
                android:id="@+id/et_input_manufacturer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_manufacturer"
                android:lines="1"
                android:inputType="text" />
        </RelativeLayout>

        <!-- 모델명 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_model"/>
            <EditText
                android:id="@+id/et_input_model"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_model"
                android:lines="1"
                android:inputType="text" />
        </RelativeLayout>

        <!-- 규격 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_size"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_input_size_length"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_size"
                android:gravity="center"
                android:hint="@string/input_text_size_length"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_input_size_x_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_alignTop="@id/ed_input_size_length"
                android:layout_alignBottom="@id/ed_input_size_length"
                android:gravity="center_vertical"
                android:layout_toEndOf="@id/ed_input_size_length"
                android:text="x"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_input_size_width"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_size_x_1"
                android:gravity="center"
                android:hint="@string/input_text_size_width"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_input_size_x_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_alignTop="@id/ed_input_size_width"
                android:layout_alignBottom="@id/ed_input_size_width"
                android:gravity="center_vertical"
                android:layout_toEndOf="@id/ed_input_size_width"
                android:text="x"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_input_size_height"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_size_x_2"
                android:gravity="center"
                android:hint="@string/input_text_size_height"
                android:inputType="numberDecimal" />
        </RelativeLayout>

        <!-- 제조일자 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_manufacture_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_manufacture_date"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_input_manufacture_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_manufacture_date"
                android:lines="1"
                android:inputType="text|numberDecimal"
                android:hint="@string/hint_input_manufacture_date" />
        </RelativeLayout>

        <!-- 수량 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_amount"/>
            <EditText
                android:id="@+id/et_input_amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_input_amount"
                android:lines="1"
                android:inputType="text|numberDecimal"
                android:hint="@string/hint_input_amount" />
        </RelativeLayout>

        <!-- 상태 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_condition"/>

            <RadioGroup
                android:id="@+id/radio_input_condition_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_toEndOf="@id/tv_input_condition">

                <RadioButton
                    android:id="@+id/radio_input_condition_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/text_condition_high" />
                <RadioButton
                    android:id="@+id/radio_input_condition_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/text_condition_middle" />
                <RadioButton
                    android:id="@+id/radio_input_condition_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/text_condition_low" />
            </RadioGroup>
        </RelativeLayout>

        <!-- 기타 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_note"/>
            <EditText
                android:id="@+id/et_input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_input_note"
                android:inputType="text" />
        </RelativeLayout>

        <!-- 확인 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_clear_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/input_btn_clear" />
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/btn_clear_data"
                android:text="@string/input_btn_confirm" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
