<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/text_category_title"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!-- 대분류 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5f">

            <EditText
                android:id="@+id/ed_main_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_main_category_title"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <!-- 소분류 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5f">

            <EditText
                android:id="@+id/ed_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_sub_category_title"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_sub_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</layout>